edifact-edi/2.1/modules/ROOT/pages/edifact-edi-connector-reference.adoc
= EDIFACT EDI Connector 2.1 Reference

== Default Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Connectors reference the configuration with this name. | |x
| Expiration Policy | ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime actually purges the instances as it sees fit. |  |
| Mule interchange ID | String |  Identification for Mule in exchange (UNB segment). This value is used in combination with the self identification interchange identifier qualifier value, and if one is set the other must also be set. If this value is set, it affects both Send and Receive message handling. On the receive side, the UNB interchange recipient identification must match this value. On the send side, this value is used as the UNB interchange sender identification unless overridden in the message parameters. |  |
| Mule ID qualifier | String |  Identification qualifier for Mule in exchange (UNB segment). This value is used in combination with the self identification interchange identifier value, and if one is set the other must be set. If this value is set, it affects both Send and Receive message handling. On the receive side, the UNB interchange recipient identification code qualifier must match this value. On the send side, this value is used as the UNB interchange sender identification code qualifier unless overridden in either the send configuration or the message parameters. |  |
| Partner interchange ID | String |  Identification for partner in exchange (UNB segment). This value is used in combination with the partner identification interchange identifier qualifier value, and if one is set the other must also be set. If this value is set, it affects both Send and Receive message handling. On the receive side, the UNB interchange sender identification must match this value. On the send side, this value is used as the UNB interchange recipient identification unless overridden in either the send configuration or the message parameters. |  |
| Partner ID qualifier | String |  Identification qualifier for partner in exchange (UNB segment). This value is used in combination with the partner identification interchange identifier value, and if one is set the other must also be set. If this value is set, it affects both Send and Receive message handling. On the receive side, the UNB interchange sender identification code qualifier must match this value. On the send side, this value is used as the UNB interchange recipient identification code qualifier unless overridden in either the send configuration or the message parameters. |  |
| Schema definitions | Array of String |  List of paths for schemas to be used by module. The paths may be either for file system or classpath. |  |x
| Substitution character | String |  Substitution character used to replace invalid characters in string values when using syntax level UNOA or UNOB. The actual use of this substitution character, if set, is controlled by separate parser and writer flags. |  |
| Separators usage | Enumeration, one of:

** USE_DEFAULTS
** USE_SPECIFIED_FOR_WRITES
** USE_SPECIFIED_FOR_ALL |  Usage of specified separator and release characters:

* USE_DEFAULTS - Use defaults as defined by EDIFACT syntax version standards.
* USE_SPECIFIED_FOR_WRITES - Use standard default delimiters for reads, use specified delimiters as defaults for writes.
* USE_SPECIFIED_FOR_ALL - Use specified delimiters as defaults for both reads and writes. |  USE_SPECIFIED_FOR_ALL |
| Data element separator | String |  Default data element separator character. |  + |
| Component element separator | String |  Component element separator character. |  : |
| Repetition separator | String |  Repetition separator character. |  * |
| Segment terminator | String |  Segment terminator character. |  ' |
| Release character | String |  Release character. |  ? |
| Enforce length limits | Boolean |  Enforce minimum and maximum lengths for receive values. If true, a message with values that are too long or too short is rejected. If set to false, uses the values and the transaction are not rejected. In either case, the error is logged and reported in CONTRL functional acknowledgments. |  true |
| Enforce value repeats | Boolean |  Enforce repetition count limits for receive values. If true, a message with values repeated too many or too few times is rejected; if false, the value are accepted and the transaction is not rejected. In either case the error is reported in CONTRL functional acknowledgments. |  true |
| Enforce valid characters | Boolean |  Enforce valid characters (only applies when using syntax levels UNOA and UNOB). If true, a received message containing characters not allowed by the syntax level is rejected; if false, the character is either passed through or substituted (depending on whether a substitution character has been set) and the message is not rejected. |  true |
| Allow unknown segments | Boolean |  Allow unknown segments in a message. If false, a message containing any unknown segments is rejected. If true, unknown segments are ignored and the message is not rejected. In either case the error is reported in CONTRL functional acknowledgments. |  false |
| Enforce segment order | Boolean |  Enforce segment order in a message. If true, a message with segments out of order is rejected; if false and the segment can be reordered the message is not rejected. In either case the error is reported in CONTRL functional acknowledgments. |  true |
| Allow unused segments | Boolean |  Allow segments marked as Unused in a message. If false, a message containing segments marked as unused in the schema is rejected. If true, the message is not rejected and the unused segments are ignored. In either case the error is reported in CONTRL functional acknowledgments. |  true |
| Enforce segment repeats | Boolean |  Enforce segment repetition count limits in a message. If true, a message with a segment repeated too many times is is rejected. If false, the message is not rejected. In either case the error is reported in CONTRL functional acknowledgments. |  true |
| Character encoding override | String |  Character encoding override for Receive messages. Normally the character encoding is determined by the syntax identifier in the UNB header segment, but when this value is set it is used instead. The value must be a Java character encoding name. |  |
| Require unique interchanges | Boolean |  Reject an interchange if the Interchange Control Reference has previously been processed. The normal behavior is to record the interchange numbers previously processed and reject any duplicate interchange numbers from the same partner (as determined by the interchange sender and receiver identification). If false, this instead allows processing of the received interchange to continue and leaves it to the application flow to track numbers and handle appropriately. |  false |
| Require unique messages | Boolean |  Enforce globally unique Message Reference Numbers (UNH.1) for received messages. By default, message reference numbers only need to be unique with a particular interchange. If true, this instead requires message reference numbers to be unique across all interchanges received from the same partner and application (as determined by the interchange sender and recipient identification). |  false |
| Store time-to-live | Number |  Minimum number of days to store interchange and message numbers for checking uniqueness. This value is only used when unique interchange and/or message numbers are required by the configuration. The default persistent object store from the Mule configuration is always used for storing the received identifier numbers, and this parameter sets the entry time-to-live for these stored values. |  30 |
| Write character encoding | Enumeration, one of:

** ASCII_A
** ASCII_B
** ISO8859_1
** ISO8859_2
** ISO8859_3
** ISO8859_4
** ISO8859_5
** ISO8859_6
** ISO8859_7
** ISO8859_8
** ISO8859_9
** UTF8 |  Character encoding used for writing messages. |  ASCII_B |
| Syntax version | Enumeration, one of:

** VERSION2
** VERSION3
** VERSION4 |  Syntax version for Send messages, also used to determine the data structures used for service segments and CONTRL acknowledgment message structures in DataSense metadata for both send and receive. The actual message data for Receive messages reflects the syntax version used in the received interchange. |  VERSION4 |
| Segment line ending | Enumeration, one of:

** NONE
** LF
** CRLF
** CR |  Line ending to add between segments. This allows you to add line endings between segments to improve the readability of the output message text. |  NONE |
| Always send UNA | Boolean |  Always send UNA service segment. With the default setting of false a UNA is only included in an interchange when the syntax separator characters don't match the defaults for the syntax version and character encoding in use, if set to true, a UNA is always sent. |  false |
| Enforce valid characters | Boolean |  Enforce valid characters (only applies when using syntax levels UNOA and UNOB). If true, a received message containing characters not allowed by the syntax level is rejected; if false, the character is either passed through or substituted (depending on whether a substitution character has been set) and the message is not rejected. |  true |
| Unique message numbers | Boolean |  Send unique Message Reference Numbers (UNH.1). By default, message reference numbers are assigned sequentially within each interchange and are reused in different interchange. If true, this instead assigns unique transaction set numbers across all interchanges sent to the same partner (as determined by the interchange sender and recipient identification). |  false |
| Initial interchange reference | String |  The initial Interchange Control Reference used for outgoing messages. |  1 |
| Initial message reference | String |  The initial Message Reference Number used for outgoing messages. |  1 |
| Request acknowledgments | Boolean |  Request acknowledgments for Send interchanges using Acknowledgment Request field (UNB.9). If true, CONTRL acknowledgments are requested in all sent interchanges. If false, only receipt confirmations are requested. |  false |
| Test indicator | String |  Test indicator digit to be used on Send interchanges. By default, interchanges are not sent as tests. |  |
| Use Supplied Values | Boolean | Whether to generate control numbers when writing or use supplied values for control-segment information such as control numbers. The default behavior is to always generate control numbers when writing, this allows you to instead use the values you have chosen. | false |
| Interchange control number key | String | Whether to allow users to specify the Interchange control number key name, giving flexibility on setting this at a configuration level| NONE |
| Message control number key | String | Whether to allow users to specify the Message control number key name, giving flexibility on setting this at a configuration level| NONE |
|===


== Operations

* read
* write

== Read

`<edifact:read>`


Transform an input stream of EDI text into maps and lists structure of EDI data.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Read Content | Binary |  |  `#[payload]` |
| Target Variable | String |  The name of a variable on which the operation's output is placed. |  |
| Target Value | String |  An expression to evaluate against the operation's output and the outcome of that expression is stored in the target variable. |  `#[payload]` |
|===

=== Output

[cols="30a,70a"]
|===
| Type | Object
|===

=== For Configurations

* config

=== Throws

* EDIFACT:SCHEMA
* EDIFACT:WRITE
* EDIFACT:UNKNOWN
* EDIFACT:PARSE

== Write

`<edifact:write>`

Transform maps and lists structure of EDI data to EDI text stream.

=== Parameters

[%header,cols="30a,70a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Write Content | Object |  |  `#[payload]` |
| Streaming Strategy | * repeatable-in-memory-stream
* repeatable-file-store-stream
* non-repeatable-stream |  Configure to use repeatable streams and their behavior. |  |
| Target Variable | String |  The name of a variable on which the operation's output is placed. |  |
| Target Value | String |  An expression to evaluate against the operation's output and the outcome of that expression is stored in the target variable. |  `#[payload]` |
|===

=== Output

[cols="30a,70a"]
|===
| Type | Binary
|===

=== For Configurations

* config

=== Throws

* EDIFACT:SCHEMA
* EDIFACT:WRITE
* EDIFACT:UNKNOWN
* EDIFACT:PARSE

== Types
[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="30a,70a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time | Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit | Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size | Number | This is the amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can fit into the buffer, it expands according to the `bufferSizeIncrement` attribute, with an upper limit of `maxInMemorySize`. |  |
| Buffer Size Increment | Number | By how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size | Number | This is the maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower or equal to zero means no limit. |  |
| Buffer Unit | Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size | Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it starts to buffer the content on the disk. |  |
| Buffer Unit | Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed. |  |
|===

== See Also

* https://help.mulesoft.com[MuleSoft Help Center]
